# Set-Piece-Sim

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  fly.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
apps/backend/: Dockerfile  openapi.json  pyproject.toml
apps/backend/scripts/: dump_openapi.py
apps/backend/src/restart_api/: __init__.py  deps.py  errors.py  hashing.py  main.py  programs.py  ratelimit.py  schemas.py  security.py  settings.py  xg.py
apps/backend/src/restart_api/jobs/: __init__.py  arq_queue.py  queue.py  runner.py
apps/backend/src/restart_api/repositories/: __init__.py  file.py  ports.py  postgres.py
apps/backend/src/restart_api/routers/: health.py
apps/backend/src/restart_api/routers/v1/: __init__.py  optimizations.py  scenarios.py  setpieces.py  sim_runs.py  teams.py
apps/backend/src/restart_api/squads/: __init__.py  loader.py
apps/backend/src/restart_api/studies/: __init__.py  loader.py
apps/backend/tests/: conftest.py  test_arq_queue.py  test_errors.py  test_health.py  test_idempotency.py  test_jobs.py  test_openapi.py  test_optimizations.py  test_postgres_repo.py  test_queue.py  test_ratelimit.py  test_scenarios.py  test_security.py  test_setpieces.py  test_settings.py  test_sim_runs.py  test_squads.py  test_teams.py  test_validation.py
apps/frontend/: README.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/frontend/src/app/: globals.css  layout.tsx  page.test.tsx  page.tsx
apps/frontend/src/app/optimize/: page.tsx
apps/frontend/src/app/optimize/[id]/: page.tsx
apps/frontend/src/app/scenarios/: page.test.tsx  page.tsx
apps/frontend/src/app/scenarios/[id]/: page.tsx
apps/frontend/src/app/workbench/: page.tsx
apps/frontend/src/components/: EnvironmentBadge.tsx  Pitch.tsx  Workbench.test.tsx  Workbench.tsx
apps/frontend/src/components/optimize/: InsightsPanel.tsx  SensitivityBanner.tsx  StudyDetail.tsx  optimize.test.tsx
apps/frontend/src/components/shell/: AppNav.tsx  HeroPitch.tsx  PageTransition.tsx
apps/frontend/src/components/workbench/: BuildPanel.tsx  ComparePanel.test.tsx  ComparePanel.tsx  DeterminismBanner.tsx  Replay3D.tsx  ReplayPanel.tsx  ScenarioWorkbench.test.tsx  ScenarioWorkbench.tsx  SimulatePanel.test.tsx  SimulatePanel.tsx  replay3d-util.test.ts  replay3d-util.ts
apps/frontend/src/lib/: api.ts  compareStats.test.ts  compareStats.ts
apps/frontend/tests/e2e/: journey.spec.ts
data/: README.md
docs/: 01-prd.md  02-system-architecture.md  03-database-schema.md  04-data-pipeline.md  05-simulation-architecture.md  06-ml-architecture.md  07-ui-ux-design.md  08-roadmap.md  09-optimization-methodology.md  GO-LIVE.md  README.md  ROADMAP-future-enhancements.md  data-dictionary.md  development-guide.md  etl-runbook.md  legacy-and-from-scratch.md  setup-guide.md  simulation-assumptions.md
docs/adr/: ADR-001-physics-stack-build-vs-buy.md  ADR-002-integration-strategy.md  ADR-003-agent-architecture.md  ADR-004-routine-spec.md  ADR-005-data-platform-and-xg.md  ADR-006-routine-optimizer.md  ADR-007-api-workbench-and-persistence.md  ADR-008-optimization-surface-and-3d-replay.md  ADR-009-scenario-realism.md  ADR-010-evolutionary-search.md  ADR-011-throughput-kernel.md  README.md
docs/api/: README.md
docs/case-studies/: england-vs-argentina.md
docs/handoff/: ADR_SUMMARY.md  ARCHITECTURE_SUMMARY.md  ASSUMPTIONS_REGISTER.md  FUTURE_CHAT_BOOTSTRAP.md  PHASE_HANDOFF.md  PROJECT_STATUS.md  TECHNICAL_DEBT.md
docs/model-cards/: xg-v1.md
docs/phase-reviews/: phase-2-design-review.md
docs/superpowers/plans/: 2026-06-15-phase6-api-workbench.md  2026-06-20-phase7-optimization-ui.md  2026-06-20-phase8-scenario-realism.md
docs/superpowers/specs/: 2026-06-14-phase5-optimizer-design.md  2026-06-20-phase7-optimization-ui-design.md  2026-06-20-phase8-scenario-realism-design.md  2026-06-21-phase9-evolution-design.md  2026-06-22-phase10-numba-kernel-design.md
infra/: docker-compose.yml
models/: active.json  xg-v1.json
optimization_studies/england-vs-argentina/: study.json
scripts/: rebaseline_canonical.py  verify.ps1  verify.sh
tests/: test_workspace_integration.py
