# Workspace root: not an installable package (tool.uv.package = false).
# Owns the uv workspace definition and all shared tool configuration, so every
# member package is linted/typed/tested under identical rules.

[project]
name = "restart-lab"
version = "0.1.0"
description = "Restart Lab - AI-assisted set-piece optimization for international football (workspace root)"
requires-python = ">=3.12"
dependencies = [
    "restart-simulation-core",
    "restart-backend",
    "restart-etl",
    "restart-ml",
    "restart-optimizer",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "apps/backend",
    "packages/simulation-core",
    "packages/etl",
    "packages/ml",
    "packages/optimizer",
]

[tool.uv.sources]
restart-simulation-core = { workspace = true }
restart-backend = { workspace = true }
restart-etl = { workspace = true }
restart-ml = { workspace = true }
restart-optimizer = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "httpx>=0.28",        # FastAPI TestClient transport
    "ruff>=0.8",
    "black>=24.10",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "hypothesis>=6.115",
    "pytest-benchmark>=5.1",
    "scipy-stubs>=1.14",
]

# ---------------------------------------------------------------------------
# Lint / format / type / test configuration (single source of truth)
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"
src = [
    "apps/backend/src",
    "packages/simulation-core/src",
    "packages/etl/src",
    "packages/ml/src",
    "packages/optimizer/src",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "RET", # return discipline
    "PTH", # pathlib over os.path
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length is Black's job
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["B011"] # assert-related relaxations for tests only

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.mypy]
strict = true
python_version = "3.12"
warn_unreachable = true
warn_redundant_casts = true
show_error_codes = true
plugins = ["pydantic.mypy"]
mypy_path = [
    "apps/backend/src",
    "packages/simulation-core/src",
    "packages/etl/src",
    "packages/ml/src",
    "packages/optimizer/src",
]
explicit_package_bases = true
files = [
    "apps/backend/src",
    "apps/backend/tests",
    "packages/simulation-core/src",
    "packages/simulation-core/tests",
    "packages/etl/src",
    "packages/etl/tests",
    "packages/ml/src",
    "packages/ml/tests",
    "packages/optimizer/src",
    "packages/optimizer/tests",
    "tests",
]

[[tool.mypy.overrides]]
module = ["numba.*"]
ignore_missing_imports = true

# Data/ML third-party libs without mypy-strict-friendly stubs. Treated as Any at
# their boundary; our own glue stays fully typed. (pandas is deliberately not a
# dependency — its inline types fight strict mode; we use pyarrow + numpy.)
[[tool.mypy.overrides]]
module = [
    "pyarrow.*",
    "duckdb.*",
    "sklearn.*",
    "lightgbm.*",
    "xgboost.*",
    "catboost.*",
    "mlflow.*",
    "joblib.*",
    "optuna.*",
    "shap.*",
]
ignore_missing_imports = true

# Web/infrastructure adapter libs without strict-friendly stubs (Phase 6). Our
# own adapter glue stays fully typed; only the third-party boundary is Any.
[[tool.mypy.overrides]]
module = [
    "slowapi.*",
    "arq.*",
    "psycopg.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "packages/simulation-core/tests",
    "packages/etl/tests",
    "packages/ml/tests",
    "packages/optimizer/tests",
    "apps/backend/tests",
    "tests",
]
# importlib mode: test dirs are namespace-style (no __init__.py), which keeps
# mypy module names collision-free across the monorepo's three tests/ trees.
addopts = "-q --strict-markers --import-mode=importlib"
markers = [
    "integration: cross-package integration tests",
]
